# drums_transcription_algorithm

./: README.md  cli.py  pyproject.toml
.actions/workflows/: main.yml
.github/workflows/: django.yml
_project_tracking/: _project_tracking.md  architectures.doc
drum_transcription/: __init__.py  confussion_matrix.py  data_pre_processer.py  data_set_generator.py  dataset_loader.py  mfcc_feature_extraction.py  ml_model.py  pre_processing.py  predict.py
drum_transcription/settings/: config.json  settings.py
model_checkpoints/: README.md
model_full_export/: saved_model.pb
model_full_export/variables/: variables.data-00001-of-00002  variables.index
tests/: test_dataset_loader.py  test_drum_transcription.py  test_mfcc_feature_extracttion.py  test_post_precessing.py  test_pre_processing.py  test_settings.py
