[tool.poetry]
name = "dl4aed-ws2122-p4"
version = "0.1.0"
description = "Drum transcription algorithm using DNN"
authors = [
    "Juan Antonio Gomez Daza <juan.a.gomezdaza@campus.tu-berlin.de>",
    "Thilo Schmidt <schmidt.17@campus.tu-berlin.de>",
    "Ivo Hagenmaier <ivo.hagenmaier@campus.tu-berlin.de>",
    "Gideon Krumbach <krumbach@campus.tu-berlin.de>"
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
tensorflow = "1.15.5"
numpy = "1.18.5"
click = "^8.0.4"
keras = "^2.8.0"
h5py = "<=2.10.0"
tensorflow-directml = {version = "1.15.5", optional = true}
pydantic = "^1.9.0"
librosa = "^0.9.1"
mido = "^1.2.10"
scipy = "1.6.1."
black = "^22.1.0"

[tool.poetry.extras]
dev_tools = ["tensorflow-directml"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
